# EmbeddedMusicVisualizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  musicviz_arch.vcd
Graphic/: graphic.c  graphic.h  lv_conf.h  lv_drv_conf.h
Graphic/main_page/: mainpage.c  mainpage.h
Graphic/music_visualizer_pages/: arcreactor.c  arcreactor.h  back_icon_png.c  basicmusicvisual.c  circular.c  circular.h  mvpage.c  mvpage.h  particlefountain.c  particlefountain.h  peakmeter.c  peakmeter.h  pinkdiamond.c  pinkdiamond.h  waveform.c  waveform.h
LedMatrix/: led.c  led.h
MusicProcessor/: musicprocessor.c  musicprocessor.h  ring_buffer.c  ring_buffer.h
build-sc/: CMakeCache.txt  Makefile  cmake_install.cmake  musicviz_sc_sim
deploy/: musicvisualizer
deploy/lib/: libavdevice.so.58.13.100  libavfilter.so.7.110.100  libavformat.so.58.76.100  libavutil.so.56.70.100  libswresample.so.3.9.100  libswscale.so.5.9.100
systemc_sim/: CMakeLists.txt  sc_main.cpp
